--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb://localhost:27017/auth_test
+      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/auth_test
     depends_on:
       - mongo
 
